hphp/test/zend/bad/Zend/tests/each_002.php
<?php

$foo = each(new stdClass);
var_dump($foo);

var_dump(each(new stdClass));

$a = array(new stdClass);
var_dump(each($a));


?>